# REAPER

./: .clang-format  .clang-tidy  .gitignore  README.md  left_data.csv  right_data.csv  temp.data  ukf.yaml  ukf_aruco.launch.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh  packages.repos
.github/actions/cppformat/: Dockerfile  action.yml  entrypoint.sh  oldDockerfile
.github/workflows/: ci.yml  entrypoint.sh  format.sh  formatter.yml  main.yml  run-clang-tidy.py  test.yml  w1.yml  w2.yml
Configuration/: 60-reaper-udev.rules  install_UDEV.sh
backups/: reset_can.py  test_reset.py  tl_reset_can.sh
build_scripts/: build.sh
config/: 99-reaper-udev.rules  install_UDEV.sh  install_dependencies.sh  ukf_config.yaml
examples/: MotorControllerRosNode.cpp
launch_scripts/: can_startup.sh  gui_launch.sh  isaacRosZed2launch.py  isaac_ros_visual_slam_zedxm_v2.launch.py  launch.sh  launch_no_encoder.sh  zed_camera.launch.py
logs/: power_more_then_try_to_go_to_pos.hoot  start_in_constructor_then_power_a_little_then_try_to_go_to_pos.hoot  try_to_go_from_starting_config_to_starting_config.hoot  try_to_go_to_0_pos_ONLY.hoot
robot_localization-ros2/robot_localization-ros2/params/: ukf.yaml
src/AbsoluteEncoder/: EncoderSubscriber.py  absoluteEncoderreader.py
src/AbsoluteEncoderCanNode/: absoluteEncoderRosNode.py  setNewCanId.py  testabsoluteEncoderRosNode.py
src/action_interfaces/: CMakeLists.txt  package.xml
src/action_interfaces/action/: .Dig.action.swp  Dig.action  Drive.action  Dump.action  Fuser.action
src/aruco_pose_estimation/: package.xml  setup.py
src/aruco_pose_estimation/aruco_pose_estimation/: aruco_node.py
src/aruco_pose_estimation/config/: matrixanddist.npz
src/camera_streamer/: package.xml  setup.py
src/camera_streamer/camera_streamer/: stream_fuser.py  usb_camera_streamer.py  usb_camera_streamer_param.py  usbcam_node.py
src/camera_streamer/launch/: camera.launch.py
src/control_mux/: CMakeLists.txt  package.xml
src/control_mux/src/: control_mux.cpp
src/conveyor/: CMakeLists.txt  package.xml
src/dig/: CMakeLists.txt  package.xml
src/dig/config/: grim.yaml  reaper.yaml
src/dig/include/: utils.h
src/dig/launch/: dig.grim.launch.py  dig.reaper.launch.py
src/dig/src/: dig_motion_lookup.csv  dig_server.cpp  no_abs_dig_server.cpp
src/dig_bucket/: CMakeLists.txt  package.xml
src/dig_linkage/: CMakeLists.txt  package.xml
src/drivetrain/: CMakeLists.txt  package.xml
src/drivetrain/action/: Drive.action
src/drivetrain/src/: drive_server.cpp
src/dump/: CMakeLists.txt  package.xml
src/dump/action/: Dump.action
src/dump/src/: dump_server.cpp
src/field_description/: package.xml  setup.cfg  setup.py
src/field_description/config/: arenas.yaml
src/field_description/field_description/: april_tag_locations.py  field_description_publisher.py
src/field_description/launch/: launch_arena_desc.launch.py
src/gui/: GUI_Test.py  README.md  gui.py
src/reaper_description/: package.xml  setup.cfg  setup.py
src/reaper_description/config/: default_config.rviz
src/reaper_description/launch/: gz_simulator_launch.py  launch.py
src/reaper_description/meshes/collision/: Bucket.STL
src/reaper_description/meshes/visual/: Chassis.STL  Linkage.STL
src/reaper_description/urdf/: URDFassy.urdf  robot.sdf
src/state_messages/: CMakeLists.txt  package.xml
src/state_messages/msg/: MotorState.msg
src/state_messages_utils/include/state_messages_utils/: motor_to_msg.hpp
src/state_messages_utils/src/: motor_to_msg.cpp
src/system_identification/: package.xml  setup.cfg  setup.py
src/system_identification/system_identification/: system_identifier.py  system_logger.py
src/teleop_control/: CMakeLists.txt  package.xml
src/teleop_control/include/: settings.h  utils.h
src/teleop_control/launch/: teleop_control_launch.yaml  two_controllers_yaml
src/teleop_control/src/: distributor.cpp  joystick_config.yaml
src/teliop_control/: CMakeLists.txt  package.xml
src/teliop_control/src/: client.cpp
src/ukf/: package.xml  setup.cfg  setup.py
src/ukf/config/: ukf_config.yaml
src/ukf/launch/: launch_ukf.py
src/ukf_package/: CMakeLists.txt  package.xml
src/ukf_package/config/: ukf_config.yaml
src/ukf_package/launch/: launch_ukf.py
state_messages_utils/: CMakeLists.txt  package.xml
state_messages_utils/include/state_messages_utils/: motor_to_msg.hpp
state_messages_utils/src/: motor_to_msg.cpp
watchdog/: CMakeLists.txt  package.xml
watchdog/src/: watchdog.cpp
workspace/src/action_tutorials_cpp/: package.xml
